Half through Tablet Media Query

--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
             </div>
 
             <aside>
-                <div class="aside__container">
+                <div class="aside__container row">
                     <h3>Break it down</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
-                <div class="aside__container">
+                <div class="aside__container row">
                     <h3>Work your way up</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
-                <div class="aside__container">
+                <div class="aside__container row">
                     <h3>Take the lead</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
